# simple_com_chart_gui

./: README.md  main.pyw
core/: channel_model.py  log_parser.py  serial_manager.py
native_mfc/: CMakeLists.txt  README.md  app.rc
native_mfc/scripts/setup/: setup_vs_cpp.bat  setup_vs_cpp.ps1
native_mfc/src/: channel_model.cpp  channel_model.h  channel_panel.cpp  channel_panel.h  help_dialog.cpp  help_dialog.h  log_parser.cpp  log_parser.h  mfc_app.cpp  mfc_main_dialog.cpp  mfc_main_dialog.h  plot_view.cpp  plot_view.h  resource.h  serial_manager.cpp  serial_manager.h
ui/: channel_panel.py  help_dialog.py  main_window.py  plot_widget.py
utils/: time_utils.py
